--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "kevin/backend",
     "version": "0.0.1",
+    "platform": {
+        "php": "8.3"
+    },
     "autoload": {
         "psr-4": {
             "Backend\\": "src/"
