feat: auth system, full refactor, traslate to english, more implementations...

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
-LOGGER_PATH =
-WEBSOCKET_PORT =
+# Path to the log file
+LOGGER_PATH= 
+
+# Path to the migrations folder
+MIGRATIONS_FOLDER= 
+
+# Database configuration
+DB_HOST= 
+DB_NAME= 
+DB_USER= 
+DB_PASS= 
+DB_PORT= 
+
+# Websocket configuration
+WEBSOCKET_PORT= 
+
+# JWT configuration
+JWT_SECRET=
+JWT_ALGORITHM=
